# SimpleArgs

./: CMakeLists.txt  README.md  main.cc
utils/: args.h  parser.h
